Insertar seccion de redes socialesx

--- a/Invitacion/Index.html
+++ b/Invitacion/Index.html
@@ -53,6 +53,11 @@
            <iframe width="914" height="514" src="https://www.youtube.com/embed/1Hojv0m3TqA" title="UNDERTALE Release Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
            </div>
         </section>
+
+        <section class="text-space hide" id="SocialMediaSection">
+            <p class="efecto-typing text"> * ¡Sigueme en todas mis redes sociales!</p>
+        </section>
+
         <footer>
             <p>2025© ADRIANA LEON CAMACHO<br>
             Todos los derechos reservados.
