--- a/Invitacion/Formulario.html
+++ b/Invitacion/Formulario.html
@@ -30,8 +30,8 @@
             <input type="email" id="coreo" name="correo" class="space-mail" placeholder="tucorreo@ejemplo.com" required>
             </div>
             <div class="decision">
-            <button onclick="efecto.play()" type="submit" class="btn space-btn">ENVIAR</button>
-            <button type="reset" class="btn space-btn">LIMPIAR</button>
+                <button class="btn space-btn">ENVIAR</button>
+                <button type="reset" class="btn space-btn">LIMPIAR</button>
             </div>
             </form>
          </section>
